Fix hambuger menu list options list on z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -214,6 +214,7 @@ footer {
 	position: fixed;
 	top: 5em;
     right: 0;
+	z-index: 10;
 	background-color: #212121;
 }
 
